--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,30 @@
 bleach==2.1.3
+boto3==1.7.62
+botocore==1.10.62
 certifi==2018.4.16
 chardet==3.0.4
+Collectfast==0.6.2
 dj-database-url==0.5.0
 dj-static==0.0.6
 Django==2.0.7
 django-environ==0.4.5
 django-filter==2.0.0
+django-rest-framework-nested==0.0.1
+django-storages==1.6.6
 djangorestframework==3.8.2
+docutils==0.14
 gunicorn==19.9.0
 html5lib==1.0.1
 idna==2.7
+jmespath==0.9.3
 Markdown==2.6.11
 Pillow==5.2.0
 psycopg2==2.7.5
+python-dateutil==2.7.3
 python-decouple==3.1
 pytz==2018.5
 requests==2.19.1
+s3transfer==0.1.13
 six==1.11.0
 static3==0.7.0
 Unipath==1.1
