--- a/requirements.txt
+++ b/requirements.txt
@@ -4,20 +4,27 @@ botocore==1.10.62
 certifi==2018.4.16
 chardet==3.0.4
 Collectfast==0.6.2
+coreapi==2.3.3
+coreschema==0.0.4
 dj-database-url==0.5.0
 dj-static==0.0.6
 Django==2.0.7
 django-environ==0.4.5
 django-filter==2.0.0
 django-rest-framework-nested==0.0.1
+django-rest-swagger==2.2.0
 django-storages==1.6.6
 djangorestframework==3.8.2
 docutils==0.14
 gunicorn==19.9.0
 html5lib==1.0.1
 idna==2.7
+itypes==1.1.0
+Jinja2==2.10
 jmespath==0.9.3
 Markdown==2.6.11
+MarkupSafe==1.0
+openapi-codec==1.3.2
 Pillow==5.2.0
 psycopg2==2.7.5
 python-dateutil==2.7.3
@@ -25,9 +32,11 @@ python-decouple==3.1
 pytz==2018.5
 requests==2.19.1
 s3transfer==0.1.13
+simplejson==3.16.0
 six==1.11.0
 static3==0.7.0
 Unipath==1.1
+uritemplate==3.0.0
 urllib3==1.23
 webencodings==0.5.1
 whitenoise==3.3.1
