--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
+amqp==2.5.2
+billiard==3.6.2.0
 bleach==2.1.3
 boto3==1.7.62
 botocore==1.10.62
+celery==4.4.0
 certifi==2018.4.16
 chardet==3.0.4
 Collectfast==0.6.2
@@ -9,19 +12,26 @@ coreschema==0.0.4
 dj-database-url==0.5.0
 dj-static==0.0.6
 Django==2.0.7
+django-elasticsearch-dsl==7.1.1
+django-elasticsearch-dsl-drf==0.20.5
 django-environ==0.4.5
 django-filter==2.0.0
+django-nine==0.2.3
 django-rest-framework-nested==0.0.1
 django-rest-swagger==2.2.0
 django-storages==1.6.6
 djangorestframework==3.8.2
 docutils==0.14
+elasticsearch==7.5.1
+elasticsearch-dsl==7.1.0
 gunicorn==19.9.0
 html5lib==1.0.1
 idna==2.7
+importlib-metadata==1.5.0
 itypes==1.1.0
 Jinja2==2.10
 jmespath==0.9.3
+kombu==4.6.7
 Markdown==2.6.11
 MarkupSafe==1.0
 openapi-codec==1.3.2
@@ -30,6 +40,7 @@ psycopg2==2.7.5
 python-dateutil==2.7.3
 python-decouple==3.1
 pytz==2018.5
+redis==3.4.1
 requests==2.19.1
 s3transfer==0.1.13
 simplejson==3.16.0
@@ -38,5 +49,7 @@ static3==0.7.0
 Unipath==1.1
 uritemplate==3.0.0
 urllib3==1.23
+vine==1.3.0
 webencodings==0.5.1
 whitenoise==3.3.1
+zipp==3.0.0
